[gd_scene load_steps=2 format=3 uid="uid://bharo7xq0nma4"]

[ext_resource type="Script" path="res://ui/menu/menu.gd" id="1_haam4"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -81.0
offset_right = 86.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_haam4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1157.0
offset_bottom = 649.0

[node name="header" type="VBoxContainer" parent="VBoxContainer"]
offset_right = 1157.0
offset_bottom = 187.0

[node name="game" type="MarginContainer" parent="VBoxContainer/header"]
offset_right = 1157.0
offset_bottom = 141.0
theme_override_constants/margin_left = 266
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 266
theme_override_constants/margin_bottom = 0

[node name="game_name" type="Label" parent="VBoxContainer/header/game"]
offset_left = 266.0
offset_top = 50.0
offset_right = 891.0
offset_bottom = 141.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Ein ganz tolles Spiel	!"

[node name="publisher" type="MarginContainer" parent="VBoxContainer/header"]
offset_left = 475.0
offset_top = 145.0
offset_right = 682.0
offset_bottom = 187.0
size_flags_horizontal = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 16

[node name="publisher_name" type="Label" parent="VBoxContainer/header/publisher"]
offset_right = 207.0
offset_bottom = 26.0
size_flags_horizontal = 4
text = "Game by Hephaistos Forge"

[node name="body" type="MarginContainer" parent="VBoxContainer"]
offset_top = 191.0
offset_right = 1157.0
offset_bottom = 603.0
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 56
theme_override_constants/margin_right = 800
theme_override_constants/margin_bottom = 56

[node name="menu_frame" type="PanelContainer" parent="VBoxContainer/body"]
offset_left = 96.0
offset_top = 56.0
offset_right = 357.0
offset_bottom = 356.0

[node name="buttons_list" type="VBoxContainer" parent="VBoxContainer/body"]
offset_left = 96.0
offset_top = 56.0
offset_right = 357.0
offset_bottom = 356.0
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="play_container" type="MarginContainer" parent="VBoxContainer/body/buttons_list"]
offset_right = 261.0
offset_bottom = 65.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="play" type="Button" parent="VBoxContainer/body/buttons_list/play_container"]
offset_left = 8.0
offset_top = 8.0
offset_right = 253.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 32
text = "Spielen"

[node name="highscore_container" type="MarginContainer" parent="VBoxContainer/body/buttons_list"]
offset_top = 81.0
offset_right = 261.0
offset_bottom = 142.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="highscore" type="Button" parent="VBoxContainer/body/buttons_list/highscore_container"]
offset_left = 8.0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 32
text = "Highscore"

[node name="options_container" type="MarginContainer" parent="VBoxContainer/body/buttons_list"]
offset_top = 158.0
offset_right = 261.0
offset_bottom = 219.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="options" type="Button" parent="VBoxContainer/body/buttons_list/options_container"]
offset_left = 8.0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 32
text = "Einstellungen"

[node name="exit_container" type="MarginContainer" parent="VBoxContainer/body/buttons_list"]
offset_top = 235.0
offset_right = 261.0
offset_bottom = 300.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="exit" type="Button" parent="VBoxContainer/body/buttons_list/exit_container"]
offset_left = 8.0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 32
text = "Beenden"

[node name="footer" type="MarginContainer" parent="VBoxContainer"]
offset_top = 607.0
offset_right = 1157.0
offset_bottom = 649.0
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="version" type="Label" parent="VBoxContainer/footer"]
offset_top = 8.0
offset_right = 1149.0
offset_bottom = 34.0
text = "alpha zerro"
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/body/buttons_list/play_container/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/play_container/play" to="." method="_on_spielen_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/highscore_container/highscore" to="." method="_on_highscore_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/highscore_container/highscore" to="." method="_on_einstellungen_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/options_container/options" to="." method="_on_einstellungen_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/options_container/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/exit_container/exit" to="." method="_on_beenden_pressed"]
[connection signal="pressed" from="VBoxContainer/body/buttons_list/exit_container/exit" to="." method="_on_exit_pressed"]
